--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,47 @@ html {
   transition-delay: 0.5s;
 }
 
+ /* button of all products */
+
+.categoryBtn{
+  color: #000000;
+  position: relative;
+  padding: 10px 30px;
+  margin: 0px 55px;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: 0.2s;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+  overflow: hidden;
+}
+.categoryBtn:hover{
+  color: #12996d;
+  position: relative;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: 0.2s;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+  overflow: hidden;
+}
+.categoryBtn:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 10px;
+  height: 10px;
+  border-bottom: 2px solid #000000;
+  transition: 0.5s;
+  transition-delay: 0.5s;
+}
+.categoryBtn:hover:after {
+  width: 100%;
+  height: 100%;
+  transition-delay: 0s;
+}
+
 /* features */
 
 .features {
