fix responsive add new cat kid and more other features

--- a/src/App.css
+++ b/src/App.css
@@ -427,7 +427,7 @@ button {
   }
   .NavbarProductsList {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     margin: auto;
   }
   .hiddenBtn {
